# platform-frontend-ai-dev

./: .env.example  .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Dockerfile.runner  Makefile  OPERATIONS.md  README.md  SETUP.md  config.json  costs.sh  docker-compose.yml  entrypoint.sh  init.sh  project-repos.json  pyproject.toml  run.sh  start-chromium.sh
.claude/: settings.json
.tekton/: platform-frontend-ai-dev-memory-server-pull-request.yaml  platform-frontend-ai-dev-memory-server-push.yaml  platform-frontend-ai-dev-proxy-pull-request.yaml  platform-frontend-ai-dev-proxy-push.yaml  platform-frontend-ai-dev-pull-request.yaml  platform-frontend-ai-dev-push.yaml
bot/: agent.py  config.py  costs.py  mcp.json  run.py
dashboard/: package-lock.json  package.json
deploy/: template.yaml
dev-proxy/: Caddyfile  go.mod  go.sum  main.go  start-proxy.sh
docs/: onboarding-new-instance.md  roadmap.md
impact-data/: collect-impact-data.py  extract-pr-links.py  generate-report.py
memory-server/: Dockerfile  docker-compose.yml  pyproject.toml
memory-server/bot_memory_server/: api.py  schema.sql  server.py
memory-server/bot_memory_server/tools/: slack.py
memory-server/src/: api.py  artifacts.py  db.py  models.py  schema.sql  server.py
memory-server/src/migrations/: m001_generic_tasks.py
memory-server/src/static/: app.js
memory-server/src/tools/: rag.py  slack.py  tasks.py
memory-server/tests/: test_cycle_runs.py  test_dual_write.py  test_memory_upload.py  test_migration_001.py
prompts/: groom.md
proxy/: Dockerfile  squid.conf  start.sh
(+76 files in other folders)
